[gd_scene load_steps=30 format=3 uid="uid://ck01vctwk75fb"]

[ext_resource type="Script" path="res://scenes/Dino.gd" id="1_obpxm"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_dorpu"]
load_path = "res://.godot/imported/shadow_2.png-8c9dcae2302b37883e6fd45501057a44.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_3kwng"]
load_path = "res://.godot/imported/DinoSprites - tard.png-869eb2b0ab49d4e331fffcf19c6e5deb.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_1uhxt"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_gui4i"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xerpv"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_l38j4"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7mkci"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(432, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_o48em"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(456, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_inaxx"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(480, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_1eh62"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(504, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibg1e"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(528, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2aso8"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(552, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uk2x"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(288, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xri6"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(312, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rml43"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(336, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lxt0"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(360, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_klfgl"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(384, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d43xq"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(288, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0y8cq"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(96, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wojiw"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(120, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yt5b"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(144, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_t0r5l"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(168, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttc2x"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(192, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_44fht"]
atlas = SubResource("CompressedTexture2D_3kwng")
region = Rect2(216, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_ktvl5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1uhxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gui4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xerpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l38j4")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7mkci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o48em")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inaxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1eh62")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibg1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2aso8")
}],
"loop": true,
"name": &"ducking",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uk2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xri6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rml43")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lxt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klfgl")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d43xq")
}],
"loop": true,
"name": &"jumping",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0y8cq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wojiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yt5b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t0r5l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttc2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44fht")
}],
"loop": true,
"name": &"running",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gufnq"]
size = Vector2(24, 34)

[sub_resource type="AudioStreamMP3" id="AudioStreamMP3_boxrv"]
data = PackedByteArray(255, 251, 144, 196, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 88, 105, 110, 103, 0, 0, 0, 15, 0, 0, 0, 8, 0, 0, 9, 251, 0, 43, 43, 43, 43, 43, 43, 43, 43, 43, 43, 43, 43, 68, 68, 68, 68, 68, 68, 68, 68, 68, 68, 68, 68, 99, 99, 99, 99, 99, 99, 99, 99, 99, 99, 99, 99, 99, 131, 131, 131, 131, 131, 131, 131, 131, 131, 131, 131, 131, 162, 162, 162, 162, 162, 162, 162, 162, 162, 162, 162, 162, 162, 193, 193, 193, 193, 193, 193, 193, 193, 193, 193, 193, 193, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 243, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 0, 0, 0, 57, 76, 65, 77, 69, 51, 46, 57, 57, 114, 2, 165, 0, 0, 0, 0, 46, 142, 0, 0, 20, 70, 36, 6, 97, 66, 0, 0, 70, 0, 0, 9, 251, 8, 64, 76, 225, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 251, 128, 196, 0, 0, 7, 68, 19, 111, 84, 49, 128, 3, 176, 59, 45, 51, 53, 160, 0, 0, 0, 192, 20, 73, 46, 64, 48, 48, 51, 128, 0, 0, 8, 136, 62, 15, 190, 40, 8, 6, 53, 131, 252, 64, 24, 126, 15, 131, 158, 127, 148, 57, 193, 254, 80, 231, 15, 255, 195, 249, 64, 65, 221, 60, 160, 32, 115, 19, 131, 252, 16, 12, 107, 7, 250, 142, 117, 144, 90, 192, 2, 75, 154, 145, 122, 0, 0, 0, 11, 52, 214, 152, 120, 76, 3, 214, 148, 100, 39, 7, 61, 128, 209, 206, 177, 185, 5, 9, 20, 6, 173, 79, 161, 16, 54, 236, 76, 79, 2, 80, 26, 85, 46, 83, 33, 14, 144, 244, 179, 116, 48, 9, 211, 52, 64, 1, 118, 3, 2, 83, 172, 163, 34, 37, 53, 99, 189, 94, 11, 201, 143, 224, 217, 33, 202, 21, 112, 255, 202, 25, 124, 242, 171, 34, 212, 173, 124, 70, 91, 178, 106, 110, 7, 158, 206, 117, 204, 228, 18, 243, 238, 252, 23, 127, 8, 140, 15, 243, 51, 85, 164, 90, 171, 51, 157, 203, 81, 25, 253, 220, 135, 255, 12, 98, 24, 111, 82, 57, 70, 23, 105, 249, 172, 103, 243, 185, 67, 126, 236, 182, 222, 83, 85, 249, 148, 139, 234, 74, 167, 245, 53, 90, 115, 12, 109, 126, 87, 115, 221, 76, 235, 94, 187, 118, 115, 185, 214, 191, 157, 75, 210, 171, 27, 185, 86, 159, 87, 117, 134, 179, 230, 249, 127, 14, 222, 238, 61, 222, 175, 219, 221, 219, 189, 237, 45, 253, 97, 79, 141, 203, 182, 44, 212, 229, 223, 183, 103, 239, 231, 133, 203, 127, 188, 55, 175, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 252, 187, 203, 255, 254, 20, 1, 42, 194, 5, 138, 113, 48, 25, 16, 1, 100, 44, 66, 179, 132, 165, 70, 18, 160, 29, 228, 117, 165, 41, 149, 13, 69, 179, 112, 91, 34, 87, 194, 208, 246, 185, 59, 83, 146, 32, 28, 44, 86, 107, 148, 198, 152, 31, 132, 131, 206, 255, 251, 80, 196, 24, 128, 78, 104, 139, 115, 221, 134, 0, 9, 177, 144, 174, 184, 244, 138, 25, 249, 204, 214, 79, 94, 88, 229, 38, 102, 203, 158, 91, 101, 142, 69, 243, 187, 139, 163, 1, 143, 100, 22, 152, 229, 218, 26, 76, 136, 249, 248, 72, 50, 63, 106, 42, 169, 19, 245, 205, 53, 135, 232, 75, 159, 107, 107, 247, 175, 123, 127, 238, 118, 255, 116, 115, 215, 183, 227, 203, 223, 247, 246, 194, 254, 119, 58, 128, 46, 56, 73, 129, 68, 99, 37, 7, 56, 182, 108, 79, 4, 189, 1, 206, 78, 212, 2, 126, 46, 104, 88, 196, 180, 164, 168, 58, 239, 175, 220, 218, 146, 162, 225, 134, 24, 207, 127, 221, 104, 164, 210, 12, 223, 67, 3, 16, 28, 64, 134, 213, 12, 112, 33, 34, 222, 247, 10, 11, 16, 30, 190, 36, 150, 72, 93, 116, 57, 87, 3, 244, 108, 203, 31, 34, 182, 98, 164, 100, 40, 237, 157, 190, 125, 234, 189, 151, 73, 223, 115, 239, 255, 237, 232, 158, 230, 238, 174, 164, 175, 198, 245, 255, 63, 94, 189, 232, 0, 167, 165, 20, 8, 16, 0, 112, 147, 254, 97, 255, 251, 96, 196, 6, 0, 79, 92, 169, 113, 204, 48, 208, 137, 225, 147, 174, 120, 252, 32, 179, 235, 168, 200, 136, 231, 27, 79, 103, 149, 239, 115, 22, 235, 127, 94, 180, 203, 17, 122, 17, 77, 215, 239, 89, 171, 204, 236, 4, 160, 22, 2, 2, 136, 175, 173, 255, 52, 136, 4, 65, 34, 25, 191, 246, 166, 176, 8, 48, 199, 104, 249, 78, 68, 142, 36, 137, 56, 136, 158, 213, 71, 98, 208, 142, 31, 172, 114, 12, 30, 6, 124, 33, 164, 169, 45, 39, 99, 37, 42, 144, 205, 174, 41, 42, 242, 40, 133, 141, 163, 182, 122, 119, 170, 162, 149, 207, 174, 85, 43, 94, 247, 95, 125, 247, 239, 156, 221, 181, 103, 253, 245, 46, 64, 72, 200, 72, 68, 0, 147, 0, 218, 91, 128, 171, 33, 86, 22, 90, 17, 180, 57, 92, 12, 191, 97, 5, 230, 132, 208, 181, 219, 82, 165, 242, 32, 18, 18, 201, 140, 201, 41, 248, 174, 148, 210, 164, 132, 32, 188, 60, 8, 31, 86, 173, 20, 84, 26, 136, 70, 139, 218, 127, 212, 20, 44, 88, 161, 6, 34, 127, 27, 51, 154, 113, 145, 219, 247, 176, 86, 48, 0, 7, 92, 21, 48, 99, 157, 92, 82, 73, 145, 192, 82, 132, 57, 85, 59, 144, 123, 201, 111, 188, 182, 226, 239, 247, 190, 115, 62, 246, 159, 83, 127, 255, 253, 187, 187, 111, 253, 255, 255, 85, 135, 64, 50, 87, 17, 49, 64, 0, 255, 251, 96, 196, 4, 0, 78, 224, 171, 115, 204, 48, 114, 217, 222, 23, 110, 121, 134, 33, 225, 96, 45, 129, 227, 86, 104, 234, 139, 54, 83, 0, 129, 80, 117, 219, 45, 20, 220, 210, 230, 96, 109, 149, 163, 126, 51, 76, 9, 28, 145, 242, 4, 207, 59, 221, 89, 51, 54, 133, 112, 21, 39, 19, 43, 243, 243, 249, 220, 184, 200, 66, 43, 146, 11, 110, 255, 254, 76, 192, 198, 22, 16, 66, 63, 252, 102, 12, 76, 162, 224, 51, 255, 11, 26, 65, 255, 62, 21, 5, 134, 7, 1, 123, 249, 211, 170, 207, 4, 76, 203, 146, 202, 231, 254, 252, 173, 52, 215, 93, 117, 255, 186, 215, 166, 252, 253, 111, 255, 255, 254, 218, 252, 128, 24, 203, 128, 61, 18, 203, 43, 135, 24, 124, 97, 203, 193, 4, 69, 187, 123, 65, 98, 146, 182, 8, 204, 145, 165, 39, 28, 83, 53, 33, 94, 178, 5, 71, 114, 122, 138, 76, 218, 244, 233, 205, 57, 36, 142, 165, 161, 32, 243, 171, 255, 250, 36, 26, 138, 6, 193, 162, 218, 85, 79, 243, 81, 101, 56, 161, 103, 187, 223, 247, 170, 170, 148, 48, 109, 128, 51, 254, 10, 40, 38, 81, 26, 51, 251, 146, 81, 129, 161, 235, 235, 194, 166, 88, 177, 159, 221, 26, 74, 37, 76, 181, 167, 101, 170, 174, 231, 185, 246, 215, 221, 85, 189, 222, 231, 254, 245, 213, 153, 115, 6, 116, 112, 29, 132, 0, 97, 255, 251, 96, 196, 4, 128, 15, 44, 167, 117, 204, 60, 203, 209, 212, 150, 238, 185, 131, 166, 40, 139, 12, 161, 42, 94, 165, 169, 157, 45, 16, 136, 116, 138, 88, 0, 120, 176, 130, 37, 84, 149, 220, 20, 232, 68, 23, 5, 9, 126, 248, 202, 116, 146, 6, 1, 144, 235, 116, 207, 180, 185, 255, 248, 53, 107, 70, 139, 195, 157, 165, 229, 109, 237, 156, 255, 216, 226, 73, 17, 68, 154, 119, 185, 255, 253, 169, 209, 128, 161, 50, 152, 129, 57, 80, 84, 21, 10, 147, 4, 1, 13, 64, 208, 20, 70, 22, 57, 234, 10, 153, 7, 0, 97, 241, 236, 26, 214, 25, 2, 9, 236, 209, 113, 166, 176, 195, 180, 208, 247, 118, 90, 205, 63, 244, 192, 151, 180, 32, 233, 160, 21, 96, 135, 13, 136, 70, 221, 136, 109, 144, 60, 66, 5, 129, 206, 208, 210, 225, 231, 150, 83, 206, 67, 111, 179, 47, 169, 222, 135, 15, 11, 128, 168, 5, 139, 204, 249, 202, 126, 199, 15, 3, 224, 92, 15, 193, 97, 3, 8, 127, 233, 52, 192, 72, 21, 38, 4, 3, 4, 245, 159, 60, 254, 123, 85, 84, 48, 123, 145, 224, 124, 134, 184, 240, 144, 92, 8, 8, 28, 197, 1, 160, 168, 4, 56, 31, 4, 14, 89, 80, 80, 208, 56, 93, 246, 32, 39, 1, 11, 88, 164, 57, 234, 184, 205, 207, 85, 253, 217, 181, 170, 164, 18, 118, 87, 11, 169, 85, 107, 212, 255, 251, 96, 196, 5, 0, 13, 92, 161, 127, 204, 60, 237, 17, 205, 154, 46, 126, 176, 176, 2, 180, 138, 88, 210, 144, 86, 38, 190, 236, 189, 32, 230, 51, 115, 199, 19, 149, 173, 48, 219, 94, 10, 181, 129, 8, 113, 63, 159, 255, 237, 97, 188, 114, 153, 113, 169, 207, 126, 237, 234, 96, 140, 3, 132, 112, 112, 16, 0, 193, 32, 215, 255, 205, 104, 240, 148, 34, 146, 7, 131, 65, 161, 15, 136, 129, 161, 32, 88, 229, 250, 212, 108, 144, 52, 3, 28, 206, 213, 180, 36, 22, 19, 160, 223, 22, 157, 52, 105, 134, 246, 119, 181, 172, 209, 110, 132, 92, 241, 6, 160, 42, 170, 34, 130, 8, 0, 89, 152, 156, 101, 74, 24, 202, 225, 134, 229, 22, 87, 11, 72, 33, 194, 64, 126, 44, 61, 142, 252, 241, 90, 242, 129, 56, 98, 94, 255, 249, 130, 80, 220, 8, 194, 2, 4, 129, 229, 51, 239, 98, 128, 149, 255, 254, 230, 193, 2, 9, 162, 8, 60, 19, 25, 255, 255, 255, 183, 73, 202, 172, 90, 79, 64, 208, 229, 127, 255, 92, 182, 26, 214, 194, 230, 67, 31, 96, 42, 10, 132, 140, 128, 196, 14, 243, 176, 104, 145, 160, 184, 230, 124, 176, 227, 64, 67, 231, 61, 82, 76, 74, 146, 143, 98, 213, 86, 128, 0, 0, 10, 154, 54, 96, 0, 10, 164, 129, 0, 12, 147, 186, 243, 96, 181, 26, 145, 1, 10, 122, 64, 49, 226, 255, 251, 144, 196, 13, 128, 31, 93, 217, 83, 217, 188, 128, 2, 87, 180, 38, 51, 51, 64, 0, 49, 66, 57, 150, 72, 107, 132, 238, 128, 244, 20, 30, 171, 204, 150, 156, 151, 135, 77, 117, 143, 109, 172, 42, 131, 59, 75, 197, 243, 82, 27, 29, 168, 230, 49, 204, 205, 123, 24, 102, 181, 11, 251, 16, 22, 218, 97, 90, 95, 218, 170, 53, 248, 223, 231, 117, 149, 55, 120, 110, 202, 106, 1, 75, 42, 130, 111, 174, 208, 121, 53, 50, 153, 140, 52, 80, 16, 76, 210, 246, 241, 219, 178, 32, 134, 15, 150, 84, 127, 176, 201, 158, 160, 49, 199, 252, 175, 126, 3, 160, 41, 70, 190, 143, 138, 172, 32, 22, 21, 79, 90, 93, 122, 173, 189, 68, 80, 74, 247, 75, 48, 154, 213, 111, 213, 10, 229, 101, 185, 234, 237, 2, 234, 73, 42, 189, 187, 122, 253, 91, 117, 57, 147, 49, 86, 13, 231, 90, 213, 188, 63, 31, 248, 147, 223, 35, 238, 255, 53, 195, 45, 206, 37, 149, 247, 217, 225, 98, 175, 61, 184, 213, 13, 124, 153, 19, 41, 133, 254, 171, 91, 189, 42, 110, 79, 231, 57, 149, 54, 182, 250, 198, 39, 249, 173, 254, 166, 161, 233, 221, 123, 34, 136, 56, 246, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 255, 234, 77, 70, 161, 239, 255, 44, 136, 0, 0, 40, 13, 0, 4, 128, 0, 0, 0, 68, 22, 15, 44, 127, 208, 72, 99, 221, 18, 173, 254, 7, 25, 186, 218, 171, 254, 6, 4, 48, 54, 191, 137, 192, 138, 6, 142, 164, 145, 226, 112, 3, 28, 244, 14, 83, 176, 26, 56, 100, 175, 199, 145, 207, 13, 90, 85, 30, 146, 125, 127, 42, 1, 136, 82, 6, 152, 120, 141, 8, 169, 213, 106, 87, 243, 89, 24, 1, 160, 2, 201, 131, 236, 65, 122, 255, 242, 42, 82, 39, 146, 38, 133, 172, 0, 72, 0, 193, 34, 103, 235, 95, 255, 81, 2, 45, 156, 29, 192, 24, 60, 66, 97, 41, 23, 203, 203, 250, 255, 255, 212, 228, 4, 170, 44, 210, 112, 174, 152, 230, 148, 7, 36, 104, 128, 145, 2, 57, 36, 63, 253, 95, 255, 243, 99, 164, 84, 193, 76, 65, 77, 69, 51, 46, 57, 57, 46, 53, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 255, 251, 16, 196, 11, 3, 192, 0, 1, 164, 28, 0, 0, 32, 0, 0, 52, 128, 0, 0, 4, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85, 85)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pwn1h"]
size = Vector2(20, 27)

[node name="Dino" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1_obpxm")

[node name="shadow" type="Sprite2D" parent="."]
visible = false
scale = Vector2(2, 2)
texture = SubResource("CompressedTexture2D_dorpu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_ktvl5")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.954245

[node name="RunnigCol" type="CollisionShape2D" parent="."]
position = Vector2(-4, 1)
shape = SubResource("RectangleShape2D_gufnq")

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMP3_boxrv")
volume_db = -25.0

[node name="DuckingCol" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_pwn1h")
